<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".dialog.OrderDialog">

        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp" android:id="@+id/radioGroup"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">
            <RadioButton
                    android:text="@string/common_title"
                    android:checked="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/rbTitle" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/common_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/rbDate" android:layout_weight="1"
                    android:layout_marginTop="8dp"/>
        </RadioGroup>
        <Button
                android:text="@string/common_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/btnConfirm" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/common_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnConfirm" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnCancel" app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintHorizontal_bias="0.5"
        />
        <TextView
                android:text="@string/common_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:gravity="center" android:textSize="18sp"
                android:textStyle="bold" android:padding="16dp"/>
    </android.support.constraint.ConstraintLayout>
</layout>